# mgl869-lab

./: .env.example  .gitignore  config.toml  get-jira.py  pyproject.toml
src/: generate_git_understand.py  generate_jira_git.py  main.py
src/data/: bugs_hive.csv
